# internal/mods/cloud/api/cloud.api.go
@@ -2,35 +2,35 @@ package api
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/yanzongzhen/magnetu/internal/mods/repository/biz"
-	"github.com/yanzongzhen/magnetu/internal/mods/repository/schema"
+	"github.com/yanzongzhen/magnetu/internal/mods/cloud/biz"
+	"github.com/yanzongzhen/magnetu/internal/mods/cloud/schema"
 	"github.com/yanzongzhen/magnetu/pkg/util"
 )
 
-// Folder management for Repository
-type Folder struct {
-	FolderBIZ *biz.Folder
+// Cloud file management
+type Cloud struct {
+	CloudBIZ *biz.Cloud
 }
 
 // Query
-// @Tags FolderAPI
+// @Tags CloudAPI
 // @Security ApiKeyAuth
-// @Summary Query Folder list
+// @Summary Query cloud list
 // @Param current query int true "pagination index" default(1)
 // @Param pageSize query int true "pagination size" default(10)
-// @Success 200 {object} util.ResponseResult{data=[]schema.Folder}
+// @Success 200 {object} util.ResponseResult{data=[]schema.Cloud}
 // @Failure 401 {object} util.ResponseResult
 // @Failure 500 {object} util.ResponseResult
-// @Router /api/v1/folders [get]
-func (a *Folder) Query(c *gin.Context) {
+// @Router /api/v1/clouds [get]
+func (a *Cloud) Query(c *gin.Context) {
 	ctx := c.Request.Context()
-	var params schema.FolderQueryParam
+	var params schema.CloudQueryParam
 	if err := util.ParseQuery(c, &params); err != nil {
 		util.ResError(c, err)
 		return
 	}
 
-	result, err := a.FolderBIZ.Query(ctx, params)
+	result, err := a.CloudBIZ.Query(ctx, params)
 	if err != nil {
 		util.ResError(c, err)
 		return
@@ -39,17 +39,17 @@ func (a *Folder) Query(c *gin.Context) {
 }
 
 // Get
-// @Tags FolderAPI
+// @Tags CloudAPI
 // @Security ApiKeyAuth
-// @Summary Get Folder record by ID
+// @Summary Get cloud record by ID
 // @Param id path string true "unique id"
-// @Success 200 {object} util.ResponseResult{data=schema.Folder}
+// @Success 200 {object} util.ResponseResult{data=schema.Cloud}
 // @Failure 401 {object} util.ResponseResult
 // @Failure 500 {object} util.ResponseResult
-// @Router /api/v1/folders/{id} [get]
-func (a *Folder) Get(c *gin.Context) {
+// @Router /api/v1/clouds/{id} [get]
+func (a *Cloud) Get(c *gin.Context) {
 	ctx := c.Request.Context()
-	item, err := a.FolderBIZ.Get(ctx, c.Param("id"))
+	item, err := a.CloudBIZ.Get(ctx, c.Param("id"))
 	if err != nil {
 		util.ResError(c, err)
 		return
@@ -58,18 +58,18 @@ func (a *Folder) Get(c *gin.Context) {
 }
 
 // Create
-// @Tags FolderAPI
+// @Tags CloudAPI
 // @Security ApiKeyAuth
-// @Summary Create Folder record
-// @Param body body schema.FolderForm true "Request body"
-// @Success 200 {object} util.ResponseResult{data=schema.Folder}
+// @Summary Create cloud record
+// @Param body body schema.CloudForm true "Request body"
+// @Success 200 {object} util.ResponseResult{data=schema.Cloud}
 // @Failure 400 {object} util.ResponseResult
 // @Failure 401 {object} util.ResponseResult
 // @Failure 500 {object} util.ResponseResult
-// @Router /api/v1/folders [post]
-func (a *Folder) Create(c *gin.Context) {
+// @Router /api/v1/clouds [post]
+func (a *Cloud) Create(c *gin.Context) {
 	ctx := c.Request.Context()
-	item := new(schema.FolderForm)
+	item := new(schema.CloudForm)
 	if err := util.ParseJSON(c, item); err != nil {
 		util.ResError(c, err)
 		return
@@ -78,7 +78,7 @@ func (a *Folder) Create(c *gin.Context) {
 		return
 	}
 
-	result, err := a.FolderBIZ.Create(ctx, item)
+	result, err := a.CloudBIZ.Create(ctx, item)
 	if err != nil {
 		util.ResError(c, err)
 		return
@@ -87,19 +87,19 @@ func (a *Folder) Create(c *gin.Context) {
 }
 
 // Update
-// @Tags FolderAPI
+// @Tags CloudAPI
 // @Security ApiKeyAuth
-// @Summary Update Folder record by ID
+// @Summary Update cloud record by ID
 // @Param id path string true "unique id"
-// @Param body body schema.FolderForm true "Request body"
+// @Param body body schema.CloudForm true "Request body"
 // @Success 200 {object} util.ResponseResult
 // @Failure 400 {object} util.ResponseResult
 // @Failure 401 {object} util.ResponseResult
 // @Failure 500 {object} util.ResponseResult
-// @Router /api/v1/folders/{id} [put]
-func (a *Folder) Update(c *gin.Context) {
+// @Router /api/v1/clouds/{id} [put]
+func (a *Cloud) Update(c *gin.Context) {
 	ctx := c.Request.Context()
-	item := new(schema.FolderForm)
+	item := new(schema.CloudForm)
 	if err := util.ParseJSON(c, item); err != nil {
 		util.ResError(c, err)
 		return
@@ -108,7 +108,7 @@ func (a *Folder) Update(c *gin.Context) {
 		return
 	}
 
-	err := a.FolderBIZ.Update(ctx, c.Param("id"), item)
+	err := a.CloudBIZ.Update(ctx, c.Param("id"), item)
 	if err != nil {
 		util.ResError(c, err)
 		return
@@ -117,17 +117,17 @@ func (a *Folder) Update(c *gin.Context) {
 }
 
 // Delete
-// @Tags FolderAPI
+// @Tags CloudAPI
 // @Security ApiKeyAuth
-// @Summary Delete Folder record by ID
+// @Summary Delete cloud record by ID
 // @Param id path string true "unique id"
 // @Success 200 {object} util.ResponseResult
 // @Failure 401 {object} util.ResponseResult
 // @Failure 500 {object} util.ResponseResult
-// @Router /api/v1/folders/{id} [delete]
-func (a *Folder) Delete(c *gin.Context) {
+// @Router /api/v1/clouds/{id} [delete]
+func (a *Cloud) Delete(c *gin.Context) {
 	ctx := c.Request.Context()
-	err := a.FolderBIZ.Delete(ctx, c.Param("id"))
+	err := a.CloudBIZ.Delete(ctx, c.Param("id"))
 	if err != nil {
 		util.ResError(c, err)
 		return
